--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,21 @@ body {
     line-height: 140%;
 }
 
+.container {
+    max-width: 720px;
+    margin: 0 auto;
+    padding: 0 20px;
+    overflow: auto;
+}
+
+header {
+    margin: 20px 0;
+}
+
+.flex-header {
+    display: flex;
+}
+
 h1,
 h2 {
     font-family: "Benzin Bold", "Roboto", sans-serif;
@@ -84,12 +99,16 @@ a {
 .promo-first {
     background-color: var(--primary-color);
     color: var(--details-text-color);
+    border-radius: 20px;
+    padding: 20px;
+    margin-bottom: 10px;
 }
 
 .slogan {
     font-family: "Benzin Bold", "Roboto", sans-serif;
     font-size: 2rem;
     line-height: 110%;
+    margin-bottom: 20px;
 }
 
 .slogan span {
@@ -97,19 +116,32 @@ a {
 }
 
 .promo-first a {
+    display: inline-block;
     background-color: var(--secondary-color);
     font-family: "Benzin Bold", "Roboto", sans-serif;
     font-size: 1.2rem;
     border-radius: 20px;
+    padding: 10px;
+    margin-top: 20px;
 }
 
 .promo-second-elder {
     background-color: var(--secondary-color);
+    border-radius: 20px;
+    padding: 20px;
+    margin-bottom: 10px;
 }
 
 .promo-second-couple {
     background-color: var(--primary-color);
     color: var(--details-text-color);
+    border-radius: 20px;
+    padding: 20px;
+    margin-bottom: 10px;
+}
+
+.promo-second-info {
+    display: flex;
 }
 
 .promo-second-info span {
@@ -117,14 +149,41 @@ a {
     font-size: 1.2rem;
 }
 
+
+.events {
+    margin-top: 40px;
+}
+
+.types_of_events {
+    display: flex;
+    padding: 30px 0 20px;
+}
+
 .types_of_events button {
     border: 1px solid var(--border-color);
     border-radius: 20px;
+    padding: 10px;
 }
 
 .types_of_events button:active {
     border: 0;
     background-color: var(--secondary-color);
+}
+
+.blocks_img {
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 3rem;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 3rem;
+    border-bottom-left-radius: 0;
+    overflow: hidden;
+}
+
+.blocks_img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
